--- a/skills.html
+++ b/skills.html
@@ -28,26 +28,26 @@
             <h2 class="title-1">Достижения</h2>
             <ul class="projects">
                 <li class="project">
-                        <img src="./img/projects/01.jpg" alt="Project img" class="project__img">
+                        <img src="./img/projects/01.jpg" alt="Projec__img" class="project__img">
                 </li>
                 <li class="project">
-                        <img src="./img/projects/02.jpg" alt="Project img" class="project__img">
+                        <img src="./img/projects/02.jpg" alt="Projec__img" class="project__img">
                 </li>
                 <li class="project">
-                        <img src="./img/projects/03.jpg" alt="Project img" class="project__img">
+                        <img src="./img/projects/03.jpg" alt="Project__img" class="project__img">
                 </li>
 
                 <li class="project">
-                    <img src="./img/projects/04.jpg" alt="Project img" class="project__img">
+                    <img src="./img/projects/04.jpg" alt="Project__img" class="project__img">
                 </li>
                 <li class="project">
-                    <img src="./img/projects/05.jpg" alt="Project img" class="project__img">
+                    <img src="./img/projects/05.jpg" alt="Project__img" class="project__img">
                 </li>
                 <li class="project">
-                    <img src="./img/projects/06.jpg" alt="Project img" class="project__img">
+                    <img src="./img/projects/06.jpg" alt="Project__img" class="project__img">
                 </li>
                 <li class="project">
-                    <img src="./img/projects/07.jpg" alt="Project img" class="project__img">
+                    <img src="./img/projects/07.jpg" alt="Project__img" class="project__img">
                 </li>
                 <li class="project">
                     <img src="./img/projects/08.jpg" alt="project__img" class="project__img">
